@@ -6359,7 +6359,7 @@ Expression *FileExp::semantic(Scope *sc)
     }
 
     if (global.params.verbose)
-        printf("file      %s\t(%s)\n", (char *)se->string, name);
+        fprintf(stdmsg, "file      %s\t(%s)\n", (char *)se->string, name);
 
     {   File f(name);
         if (f.read())
